fix: add link on readme and change name

--- a/languages/web-core/html/11.semantic-markup/demo.html
+++ b/languages/web-core/html/11.semantic-markup/demo.html
@@ -121,9 +121,9 @@
           </p>
 
           <address>
-            Ditulis oleh Fikri<br>
+            Ditulis oleh Pythonia<br>
             Jakarta, Indonesia<br>
-            Email: fikri@example.com
+            Email: pythonia@example.com
           </address>
         </div>
       </section>
