--- a/languages/web-core/html/11.semantic-markup/explain.html
+++ b/languages/web-core/html/11.semantic-markup/explain.html
@@ -87,7 +87,7 @@
     - Bukan untuk alamat rumah random di dalam artikel biasa.
   -->
   <address>
-    Ditulis oleh Fikri<br>
+    Ditulis oleh Pythonia<br>
     Jakarta, Indonesia<br>
     email@example.com
   </address>
